--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Say Hello
+title: 联系
 permalink: /contact/
 tags: contact
 ---
@@ -10,34 +10,34 @@ tags: contact
     <form class="form-stacked">
       <label>
         Email
-        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email | default: "Email Address" }}">
+        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email | default: "邮件地址" }}">
       </label>
 
       <label>
         Content
-        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content | default: "What would you like to say?" }}" style="resize: vertical"></textarea>
+        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content | default: "你想说什么？" }}" style="resize: vertical"></textarea>
       </label>
 
       <input type="text" name="_gotcha" style="display:none" />
 
-      <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit | default: "Say Hello" }}</button>
+      <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit | default: "联系" }}</button>
     </form>
   {% else %}
     <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
       <label>
         Email
-        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email | default: "Email Address" }}">
+        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email | default: "邮件地址" }}">
       </label>
       <label>
         Content
-        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content | default: "What would you like to say?" }}" style="resize: vertical"></textarea>
+        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content | default: "你想说什么？" }}" style="resize: vertical"></textarea>
       </label>
 
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="{{ site.text.contact.subject | default: "New submission!" }}" />
       <input type="text" name="_gotcha" style="display:none" />
 
-      <input type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit | default: "Say Hello" }}">
+      <input type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit | default: "联系" }}">
     </form>
   {% endif %}
 </div>
